--- a/applications/MainWindow.xaml
+++ b/applications/MainWindow.xaml
@@ -31,6 +31,7 @@
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="true">
                                 <Setter Property="BorderBrush" TargetName="Border" Value="#2B2C2D"/>
+                                <Setter Property="Cursor" Value="Hand"/>
                             </Trigger>
                             <Trigger Property="IsPressed" Value="True">
                                 <Setter Property="Background" Value="#2B2C2D" />
@@ -59,6 +60,7 @@
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="true">
                                 <Setter Property="BorderBrush" TargetName="Border" Value="#2B2C2D"/>
+                                <Setter Property="Cursor" Value="Hand"/>
                             </Trigger>
                             <Trigger Property="IsPressed" Value="True">
                                 <Setter Property="Background" Value="#919293" />
@@ -87,6 +89,7 @@
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="true">
                                 <Setter Property="BorderBrush" TargetName="Border" Value="#2B2C2D"/>
+                                <Setter Property="Cursor" Value="Hand"/>
                             </Trigger>
                             <Trigger Property="IsPressed" Value="True">
                                 <Setter Property="Background" Value="#919293" />
@@ -367,7 +370,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Grid.Column="0">
-                    <StackPanel Background="#484A4C" SnapsToDevicePixels="True" Margin="10,0,0,0" HorizontalAlignment="Left">
+                    <StackPanel x:Name="StackPanelAppx" Background="#484A4C" SnapsToDevicePixels="True" Margin="10,0,0,0" HorizontalAlignment="Left">
                         <TextBlock FontSize="16" FontWeight="Bold" Width="240" Height="50" Padding="0,5,5,5" Text="Remove Appx Packages" TextAlignment="Left" TextWrapping="Wrap" HorizontalAlignment="Left"/>
                         <TextBlock FontSize="14" Width="240" Height="80" Text="Select check boxes to uninstall microsoft packages." TextAlignment="Left" TextWrapping="Wrap" HorizontalAlignment="Left"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Height="40">
@@ -378,7 +381,7 @@
                     </StackPanel>
                 </ScrollViewer>
                 <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Grid.Column="1">
-                    <StackPanel Background="#484A4C" SnapsToDevicePixels="True" Margin="10,0,0,0" HorizontalAlignment="Left">
+                    <StackPanel x:Name="StackPanelAppxProvisioned" Background="#484A4C" SnapsToDevicePixels="True" Margin="10,0,0,0" HorizontalAlignment="Left">
                         <TextBlock FontSize="16" FontWeight="Bold" Width="240" Height="50" Padding="0,5,5,5" Text="Remove Appx Provisioned Packages" TextAlignment="Left" TextWrapping="Wrap" HorizontalAlignment="Left"/>
                         <TextBlock FontSize="14" Width="240" Height="80" Text="Select check boxes to remove microsoft packages which are installed when an user account is created." TextAlignment="Left" TextWrapping="Wrap" HorizontalAlignment="Left"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Height="40">
@@ -389,7 +392,7 @@
                     </StackPanel>
                 </ScrollViewer>
                 <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Grid.Column="2">
-                    <StackPanel Background="#484A4C" SnapsToDevicePixels="True" Margin="10,0,0,0" HorizontalAlignment="Left">
+                    <StackPanel x:Name="StackPanelWinget" Background="#484A4C" SnapsToDevicePixels="True" Margin="10,0,0,0" HorizontalAlignment="Left">
                         <TextBlock FontSize="16" FontWeight="Bold" Width="240" Height="50" Padding="0,5,5,5" Text="Install Winget Packages" TextAlignment="Left" TextWrapping="Wrap" HorizontalAlignment="Left"/>
                         <TextBlock FontSize="14" Width="240" Height="80" Text="Select winget packages based setup. &quot;Coding and general gaming&quot; or &quot;KVM Single GPU Passthrough privacy gaming.&quot;" TextAlignment="Left" TextWrapping="Wrap" HorizontalAlignment="Left"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Height="40">
@@ -400,7 +403,7 @@
                     </StackPanel>
                 </ScrollViewer>
             </Grid>
-            <Button x:Name="Execute" Style="{StaticResource AppsInit.ExecuteButtonStyle}" Content="This. Is. Power!" Margin="255,10,255,10" Grid.Row="1" ToolTip="Run"/>
+            <Button x:Name="Execute" Style="{StaticResource AppsInit.ExecuteButtonStyle}" Content="This. Is. Power!" Margin="300,10,300,10" Grid.Row="1" ToolTip="Run"/>
         </Grid>
     </Viewbox>
 </Window>
